coupon/static/coupon/css/redeem.css
*,
*:before,
*:after {
    box-sizing: border-box;
    outline: none;
}

body,
html {
    position: relative;
    height: 100%;
    margin-top: 5px;
}

body {
    background: #dce1e3;
    font-family: 'Roboto', sans-serif;
    color: #fff;
}

.center-buttons {
    text-align: center;
    transition: all .4s ease-in-out;
}

strong {
    font-weight: 700;
}

input,
button,
textarea,
.redeem-coupon, .cancel-coupon {
    display: inline-block;
    transition: all .4s ease-in-out;
    margin: 0 auto;
}

#summary {
    z-index: 5;
    position: relative;
    display: inline-block;
    vertical-align: middle;
    width: 100%;
    border-radius: 6px;
    background: #fafafc;
    box-shadow: 0 2px 2px 1px rgba(0, 0, 0, .1);
    font-size: initial;
}

h1 {
    display: block;
    text-align: center;
    padding: 0 25px;
    height: 60px;
    font-size: 14px;
    font-weight: 400;
    color: #859299;
    line-height: 60px;
    text-transform: uppercase;
    letter-spacing: 0.2em;
}

label {
    position: relative;
    display: block;
    margin: 0;
    padding: 0 25px;
    width: 100%;
    height: 60px;
    font-size: 12px;
    font-weight: 400;
    color: #c1c9cc;
    line-height: 60px;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    border: 0;
    border-radius: 0;
    box-shadow: inset 0 1px 0 rgba(0, 0, 0, .1);
    background: #f2f3f6;
}

input:focus,
input:active {
    background: #fe97c0;
    color: white;
}

button {
    padding: 0 25px;
    width: 49%;
    height: 60px;
    font-size: 12px;
    font-weight: 400;
    color: #859299;
    line-height: 60px;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    border: 0;
    border-radius: 0;
    box-shadow: inset 0 1px 0 rgba(0, 0, 0, .1);
    background: #fafafc;
}

button:hover {
    background: #fe97c0;
    color: white;
}

.expired {
    background: #fe97c0;
    color: white;
}

